@@ -2,21 +2,20 @@ package io.fairspace.saturn.services.metadata;
 
 import io.fairspace.saturn.services.metadata.validation.MetadataRequestValidator;
 import io.fairspace.saturn.services.metadata.validation.ValidationException;
+import io.fairspace.saturn.services.metadata.validation.Violation;
 import org.apache.jena.graph.Node;
 import org.apache.jena.rdf.model.Model;
+import org.apache.jena.rdf.model.Property;
 import org.apache.jena.rdf.model.Resource;
-import org.apache.jena.rdf.model.Statement;
 import org.apache.jena.rdfconnection.RDFConnection;
 import org.apache.jena.sparql.core.Quad;
 import org.apache.jena.sparql.modify.request.QuadDataAcc;
 import org.apache.jena.sparql.modify.request.UpdateDataDelete;
 
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 
 import static io.fairspace.saturn.rdf.TransactionUtils.commit;
 import static io.fairspace.saturn.vocabulary.Vocabularies.getInverse;
-import static java.util.stream.Collectors.toList;
 import static org.apache.jena.rdf.model.ModelFactory.createDefaultModel;
 import static org.apache.jena.rdf.model.ResourceFactory.createResource;
 
@@ -27,6 +26,15 @@ public class ChangeableMetadataService extends ReadableMetadataService {
     private final MetadataEntityLifeCycleManager lifeCycleManager;
     private final MetadataRequestValidator validator;
 
+    /**
+     * Keep a cache of the inverse properties during a transaction, in order to avoid
+     * too many lookups. As many properties do not have an inverse, this map stores
+     * an Optional. An empty optional indicates that we know there is no inverse for this
+     * property. A missing value indicates that we do not know whether there is an inverse
+     * for this prperty
+     */
+    private final Map<String, Optional<Property>> inverseCache = new HashMap<>();
+
     public ChangeableMetadataService(RDFConnection rdf, Node graph, Node vocabulary, MetadataEntityLifeCycleManager lifeCycleManager, MetadataRequestValidator validator) {
         super(rdf, graph, vocabulary);
         this.lifeCycleManager = lifeCycleManager;
@@ -35,7 +43,7 @@ public class ChangeableMetadataService extends ReadableMetadataService {
 
     /**
      * Adds all the statements in the given model to the database
-     *
+     * <p>
      * If the given model contains any statements for which the predicate is marked as machineOnly,
      * an IllegalArgumentException will be thrown
      *
@@ -47,10 +55,10 @@ public class ChangeableMetadataService extends ReadableMetadataService {
 
     /**
      * Deletes the statements in the database, based on the combination of subject, predicate and object
-     *
+     * <p>
      * If any of the fields is null, that field is not included to filter statements to delete. For example, if only
      * subject is given and predicate and object are null, then all statements with the given subject will be deleted.
-     *
+     * <p>
      * If the set of triples matching the provided wildcard includes any protected triple (e.g. with a predicate marked
      * as fs:machineOnly) a ValidationException will be thrown.
      *
@@ -64,8 +72,9 @@ public class ChangeableMetadataService extends ReadableMetadataService {
 
     /**
      * Deletes the statements in the given model from the database.
-     *
+     * <p>
      * If the model contains any statements for which the predicate is marked as 'machineOnly', an IllegalArgumentException will be thrown.
+     *
      * @param model
      */
     void delete(Model model) {
@@ -74,13 +83,13 @@ public class ChangeableMetadataService extends ReadableMetadataService {
 
     /**
      * Overwrites metadata in the database with statements from the given model.
-     *
+     * <p>
      * For any subject/predicate combination in the model to add, the existing data in the database will be removed,
      * before adding the new data. This means that if the given model contains a triple
-     *   S rdfs:label "test"
+     * S rdfs:label "test"
      * then any statement in the database specifying the rdfs:label for S will be deleted. This effectively overwrites
      * values in the database.
-     *
+     * <p>
      * If the given model contains any statements for which the predicate is marked as machineOnly,
      * an IllegalArgumentException will be thrown
      *
@@ -91,7 +100,7 @@ public class ChangeableMetadataService extends ReadableMetadataService {
             var toDelete = createDefaultModel();
             model.listStatements().forEachRemaining(stmt -> {
                 // Only explicitly delete triples for URI resources. As this model is also used
-                // for validation, we do not want to include blank nodes here. Triples for blank 
+                // for validation, we do not want to include blank nodes here. Triples for blank
                 // nodes will be deleted automatically when it is not referred to anymore
                 if (stmt.getSubject().isURIResource()) {
                     toDelete.add(get(stmt.getSubject().getURI(), stmt.getPredicate().getURI(), null, false));
@@ -109,12 +118,23 @@ public class ChangeableMetadataService extends ReadableMetadataService {
         modelToAdd.remove(unchanged);
         modelToAdd.removeAll(null, null, NIL);
 
+        // Clear inverse cache before applying inference
+        // to ensure we retrieve the latest data
+        inverseCache.clear();
+
         applyInference(modelToRemove);
         applyInference(modelToAdd);
 
-        ensureValidParameters(modelToRemove, modelToAdd);
+        var violations = new LinkedHashSet<Violation>();
+        validator.validate(modelToRemove, modelToAdd,
+                (message, subject, predicate, object) ->
+                        violations.add(new Violation(message, subject.toString(), Objects.toString(predicate, null), Objects.toString(object, null))));
 
-        rdf.update(new UpdateDataDelete(new QuadDataAcc(toQuads(modelToRemove.listStatements().toList()))));
+        if (!violations.isEmpty()) {
+            throw new ValidationException(violations);
+        }
+
+        rdf.update(new UpdateDataDelete(new QuadDataAcc(toQuads(modelToRemove))));
 
         // Store information on the lifecycle of the entities
         lifeCycleManager.updateLifecycleMetadata(modelToAdd);
@@ -123,23 +143,10 @@ public class ChangeableMetadataService extends ReadableMetadataService {
         rdf.load(graph.getURI(), modelToAdd);
     }
 
-    /**
-     * Runs the given validationLogic the validator and throws an IllegalArgumentException if the validation fails
-     *
-     * If no validator is specified, the method does nothing
-     */
-    private void ensureValidParameters(Model toRemove, Model toAdd) {
-        var validationResult = validator.validate(toRemove, toAdd);
-        if(!validationResult.isValid()) {
-            throw new ValidationException(validationResult.getMessage());
-        }
-    }
-
-    private List<Quad> toQuads(Collection<Statement> statements) {
-        return statements
-                .stream()
-                .map(s -> new Quad(graph, s.asTriple()))
-                .collect(toList());
+    private List<Quad> toQuads(Model model) {
+        return model.listStatements()
+                .mapWith(s -> new Quad(graph, s.asTriple()))
+                .toList();
     }
 
     private void applyInference(Model model) {
@@ -147,14 +154,21 @@ public class ChangeableMetadataService extends ReadableMetadataService {
 
         model.listStatements().forEachRemaining(stmt -> {
             if (stmt.getObject().isResource()) {
-                var inverse = getInverse(rdf, vocabulary, stmt.getPredicate());
-
-                if (inverse != null) {
-                    toAdd.add(stmt.getObject().asResource(), inverse, stmt.getSubject());
-                }
+                getInverseWithCache(stmt.getPredicate())
+                        .ifPresent(inverse ->
+                                toAdd.add(stmt.getObject().asResource(), inverse, stmt.getSubject())
+                        );
             }
         });
 
         model.add(toAdd);
     }
+
+    private Optional<Property> getInverseWithCache(Property property) {
+        return inverseCache.computeIfAbsent(
+                property.getURI(),
+                s -> Optional.ofNullable(getInverse(rdf, vocabulary, property))
+        );
+    }
+
 }
